--- a/liczba.html
+++ b/liczba.html
@@ -3,22 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liczby i checkboxy</title>
+    <title>Document</title>
     <script src="liczby.js" defer></script>
 </head>
 <body>
     <h2>Podaj liczbę w pierwszym oknie</h2>
-    <input type="text" id="liczba" onchange="myFunkcja()">
-    <input type="text" id="liczby" onclick="myFunkcja()">
-    <p id="demo"></p>
-    <div style="margin: 100px auto;width:50%">
-    <input type="checkbox" id="1" value="1" onchange="oblicz2()">1<br>
-    <input type="checkbox" id="5" value="1" onchange="oblicz2()">2<br>
-    <input type="checkbox" id="3" value="1" onchange="oblicz2()">4<br>
-    <input type="checkbox" id="7" value="1" onchange="oblicz2()">8<br>
-
-    <label>Suma</label>
-    <input type="text" id="suma">
-    </div>
+    <input type="text" id="liczba"><input type="text" id="liczby">
+    
 </body>
 </html>
